# cddc19

./: .gitignore  count2.py  flags.txt  lscvm-emulator  lscvm-emulator.cpp  my_code.c  thing.cmd
count4-madness-filter/: my_code.c  test
golf/: codes.c
lscvm/: lscvm-ascii.cpp  lscvm-deasciiinator.cpp  lscvm-mem.cpp  lscvm-memoryinator.cpp  lscvm.cpp  q2.txt  quine-gen.lscvm  quine-gen2.lscvm  quine-gen2.txt  rc  test.lscvm
lscvm-as/: .gitignore  defs.h  frontend.cpp  lexer.cpp  main.cpp  makefile  meson.build  parser.cpp  platform.h  test.lscvm  test.s
lscvm-as/source/: codegen.cpp  error.cpp  frontend.cpp  lexer.cpp  main.cpp  parser.cpp  platform.cpp
lscvm-as/source/include/: defs.h
lscvm-as/tools/: lscvm-ascii.cpp  lscvm-mem.cpp  lscvm-vm.cpp
lscvm-as/zhiayang.lscvmasm-0.0.1/: package.json
lscvm-as/zhiayang.lscvmasm-0.0.1/Syntaxes/: lscvm.tmLanguage
lscvm/v1/: g22.txt  g32.txt  g41.txt  g61.txt  g72.txt
lscvm/v2/: g12.txt  g21.txt  g31.txt
writeup/: build.bat  writeup.tex
writeup/figures/osintblue/: macro.vba
writeup/problems/: golfing.tex  lscvm.tex  misc.tex  osintblue.tex  osintred.tex  sstv.tex
